Moving towards making UI & exports support working with samples